[gd_scene load_steps=9 format=2]

[ext_resource path="res://addons/clerk/assets/clerk.png" type="Texture" id=1]
[ext_resource path="res://addons/clerk/assets/godot.svg" type="Texture" id=2]
[ext_resource path="res://addons/clerk/scenes/components/Login.gd" type="Script" id=3]
[ext_resource path="res://addons/clerk/assets/loading.png" type="Texture" id=4]
[ext_resource path="res://addons/clerk/assets/font/Default-SourceSansPro.tres" type="DynamicFont" id=5]
[ext_resource path="res://addons/clerk/scenes/Logo.tscn" type="PackedScene" id=6]

[sub_resource type="Animation" id=1]
resource_name = "Loading"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("LoadingSprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="Animation" id=2]
length = 0.001

[node name="Main" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -275.0
margin_right = 200.0
margin_bottom = 275.0
rect_min_size = Vector2( 400, 550 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 10.0
anchor_bottom = 13.75
margin_right = -3600.0
margin_bottom = -7012.5
rect_min_size = Vector2( 400, 550 )
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="VBoxContainer"]
margin_right = 400.0
margin_bottom = 550.0
rect_min_size = Vector2( 400, 550 )
color = Color( 0.2, 0.356863, 0.945098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DefaultLogin" type="Control" parent="VBoxContainer/ColorRect"]
margin_right = 400.0
margin_bottom = 550.0
rect_min_size = Vector2( 400, 550 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClerkIcon" type="TextureRect" parent="VBoxContainer/ColorRect/DefaultLogin"]
visible = false
margin_left = 16.0
margin_top = 27.0
margin_right = 621.0
margin_bottom = 214.0
rect_min_size = Vector2( 605, 187 )
rect_scale = Vector2( 0.196646, 0.196646 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ColorRect/DefaultLogin"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -150.0
margin_top = -400.0
margin_right = 150.0
margin_bottom = -200.0
rect_min_size = Vector2( 300, 200 )
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/ColorRect/DefaultLogin/VBoxContainer"]
margin_right = 300.0

[node name="Email" type="LineEdit" parent="VBoxContainer/ColorRect/DefaultLogin/VBoxContainer"]
margin_top = 20.0
margin_right = 300.0
margin_bottom = 51.0
rect_min_size = Vector2( 300, 31 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/ColorRect/DefaultLogin/VBoxContainer/Email"]
anchor_top = -0.677
anchor_right = 0.137
margin_left = 1.0
margin_top = -0.0129986
margin_right = -0.100002
margin_bottom = 1.14441e-05
custom_fonts/font = ExtResource( 5 )
text = "Email"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Password" type="LineEdit" parent="VBoxContainer/ColorRect/DefaultLogin/VBoxContainer"]
margin_top = 71.0
margin_right = 300.0
margin_bottom = 102.0
secret = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/ColorRect/DefaultLogin/VBoxContainer/Password"]
anchor_top = -0.677
anchor_right = 0.223
margin_left = 0.999985
margin_top = -0.0130024
margin_right = 0.0999832
margin_bottom = 7.62939e-06
text = "Password"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/ColorRect/DefaultLogin/VBoxContainer"]
margin_top = 122.0
margin_right = 300.0
margin_bottom = 149.0
alignment = 1

[node name="SignIn" type="Button" parent="VBoxContainer/ColorRect/DefaultLogin/VBoxContainer/HBoxContainer2"]
margin_left = 87.0
margin_right = 212.0
margin_bottom = 27.0
rect_min_size = Vector2( 125, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/ColorRect/DefaultLogin/VBoxContainer/HBoxContainer2/SignIn"]
anchor_left = 0.507
anchor_top = 0.542
anchor_right = 0.507
anchor_bottom = 0.542
margin_left = -74.515
margin_top = -12.008
margin_right = 74.485
margin_bottom = 11.992
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Sign In"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/ColorRect/DefaultLogin"]
margin_left = 106.0
margin_top = 473.0
margin_right = 191.0
margin_bottom = 494.0
rect_min_size = Vector2( 85, 21 )
size_flags_horizontal = 2
size_flags_vertical = 2
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "No account?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SignUp" type="Button" parent="VBoxContainer/ColorRect/DefaultLogin"]
margin_left = 200.0
margin_top = 470.0
margin_right = 300.0
margin_bottom = 497.0
rect_min_size = Vector2( 100, 27 )
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/ColorRect/DefaultLogin/SignUp"]
anchor_left = 0.507
anchor_top = 0.542
anchor_right = 0.507
anchor_bottom = 0.542
margin_left = -27.7
margin_top = -11.634
margin_right = 24.3
margin_bottom = 9.366
rect_scale = Vector2( 0.960547, 0.960547 )
text = "Sign Up"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Profile" type="Control" parent="VBoxContainer/ColorRect"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Error" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.697
anchor_right = 0.5
anchor_bottom = 0.697
margin_left = -156.0
margin_top = -16.35
margin_right = 182.0
margin_bottom = 16.65
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
text = "Error"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Loading"
anims/Loading = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="LoadingSprite" type="Sprite" parent="."]
visible = false
position = Vector2( 202, 310 )
rotation = 0.615966
scale = Vector2( 0.56, 0.56 )
texture = ExtResource( 4 )
flip_h = true

[node name="Godot" type="Sprite" parent="."]
visible = false
position = Vector2( 311, 47 )
scale = Vector2( 0.113557, 0.113557 )
texture = ExtResource( 2 )

[node name="Control2" parent="." instance=ExtResource( 6 )]
anchor_left = 0.02
anchor_top = 0.085
anchor_right = 1.067
anchor_bottom = 0.234
margin_left = -9.53674e-07
margin_top = -0.0500031
margin_right = 605.2
margin_bottom = 118.0
rect_scale = Vector2( 0.409087, 0.409087 )

[connection signal="pressed" from="VBoxContainer/ColorRect/DefaultLogin/VBoxContainer/HBoxContainer2/SignIn" to="." method="_on_SignIn_pressed"]
[connection signal="pressed" from="VBoxContainer/ColorRect/DefaultLogin/SignUp" to="." method="_on_SignUp_pressed"]
